public/styles/site/_component-featured-items.scss
.featured-items {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    margin-top: -3em;
    padding: 0;

    /* TODO: is there a better way to handle this? */
    @media all and (min-width: 660px) {
        margin-top: -5em;
    }

    @media all and (min-width: 860px) {
        flex-direction: row;
        margin-top: -10em;
    }
}

.featured-item {
    display: flex;
    position: relative;
    flex-direction: column;
    align-items: center;
    width: 100%;
    margin-bottom: 1em;
    list-style: none;
    
    @media all and (min-width: 420px) {
        width: 90%;
        margin-left: 5%;
        margin-right: 5%;
    }

    @media all and (min-width: 540px) {
        width: 80%;
        margin-left: 10%;
        margin-right: 10%;
    }

    @media all and (min-width: 860px) {
        width: 30%;
        margin-left: 0;
        margin-right: 0;
        margin-bottom: 0;
    }
}

.featured-item__link {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-decoration: none;
    color: $text-color-dark;
}

.featured-item__title-container {
    display: flex;
    position: absolute;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 20%;
    background-color: $teal;
    opacity: 0.8;
}

.featured-item__title {
    color: $text-color-light;
    font-size: 1.6875em; /* 27px */
    font-weight: 300;

}

.featured-item__image {
    width: 95%;
    height: 95%;
    margin: 2.5% 0;
}

